# dictodot

./: Makefile  README.md  pyproject.toml  pytest.ini
src/dictodot/: __init__.py  main.py
